feat: しょぼいカレンダーAPIでメタデータを取得する処理の追加
