# docs/swagger.json
@@ -1546,6 +1546,10 @@
         "dto.VideoResponse": {
             "type": "object",
             "properties": {
+                "channel_id": {
+                    "description": "Syobocal チャンネルID（ChID）",
+                    "type": "integer"
+                },
                 "comments": {
                     "type": "array",
                     "items": {
@@ -1589,6 +1593,14 @@
                 },
                 "liked": {
                     "type": "boolean"
+                },
+                "prog_end_time": {
+                    "description": "放送終了時刻",
+                    "type": "string"
+                },
+                "prog_start_time": {
+                    "description": "放送開始時刻",
+                    "type": "string"
                 },
                 "screenshot_file_path": {
                     "type": "string"
@@ -1721,6 +1733,10 @@
         "entity.Video": {
             "type": "object",
             "properties": {
+                "channel_id": {
+                    "description": "Syobocal チャンネルID（ChID）",
+                    "type": "integer"
+                },
                 "created_at": {
                     "type": "string"
                 },
@@ -1758,6 +1774,14 @@
                 },
                 "liked": {
                     "type": "boolean"
+                },
+                "prog_end_time": {
+                    "description": "放送終了時刻",
+                    "type": "string"
+                },
+                "prog_start_time": {
+                    "description": "放送開始時刻",
+                    "type": "string"
                 },
                 "screenshot_file_path": {
                     "type": "string"
